--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "movies_app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://eswarchandravidyasagar.github.io/moviezone",
+  
  
   
   "dependencies": {
